# func-swap

./: .gitignore  .gitmodules  README.md
(not-in-use) frontend/: cosmos-cli.js
(not-in-use) frontend/scripts/: execute_cancel.sh  execute_public_withdraw.sh  execute_withdraw.sh  generate_withdraw_msg.sh  query_tx.sh
(not-in-use) frontend/scripts/menu/: coswasm_menu.sh  (+2 more)
(not-in-use) scripts/: deploy_cosmos.ts  init.ts  instantiate-code.sh  local-setup.sh  package-lock.json  package.json
(not-in-use) scripts/frontend-scripts/: maker-evm-escrow.ts  taker-evm-flll.ts  timelock.ts
cosmos/: Cargo.toml
cosmos/contracts/escrow_dst/: Cargo.toml
cosmos/contracts/escrow_dst/src/: constants.rs  contract.rs  error.rs  execute.rs  integration_tests.rs  lib.rs  msg.rs  query.rs
cosmos/contracts/escrow_src/: Cargo.toml
cosmos/contracts/escrow_src/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
evm/: foundry.toml  remappings.txt
evm/src/: BaseEscrow.sol  BaseEscrowFactory.sol  Escrow.sol  EscrowDst.sol  EscrowFactory.sol  EscrowSrc.sol  MerkleStorageInvalidator.sol
evm/test/: EscrowFactory.t.sol  TestERC20.sol
frontend/: withdraw_msg.json
frontend/scripts/: execute_public_cancel.sh  execute_withdraw_to.sh  generate_timelock.sh  instantiate_contract.sh  query_state.sh  store_contract.sh
nearts/: README.md  package-lock.json  package.json
nearts/src/: config.js
scripts/: deploy-code.sh  msg.json
scripts/frontend-scripts/: create-order.ts  order.ts
swap-frontend/: envConfig.ts  package-lock.json  package.json
(+37 files in other folders)
